@@ -803,4 +803,7 @@
 2010-01-31
 	* tools/libm2s-opencl: dependency with AMD APP SDK removed. Khronos headers added as
 		a subdirectory of the Multi2Sim OpenCL library.
+
+2010-02-03
+	* tools/m2s-opencl-kc: Error message for missing APP SDK updated.
 	
